// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LAN/> Snapshot managed with enabled DHCP. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="5"
    >
      Router IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="5"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="6"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="6"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="7"
      >
        Enable DHCP
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="7"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        Enable this option to automatically assign IP addresses to the devices connected to the router.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="12"
    >
      DHCP start
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="12"
          min="1"
          required=""
          type="number"
          value="123123"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="13"
    >
      DHCP max leases
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="13"
          min="1"
          required=""
          type="number"
          value="150"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="14"
    >
      Lease time (hours)
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="14"
          min="120"
          required=""
          type="number"
          value="43200"
        />
      </div>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot managed. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="5"
    >
      Router IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="5"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Router's IP address in the inner network.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="6"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="6"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <div
      class="form-label col-sm-3"
    >
      <label
        class="form-label"
        for="7"
      >
        Enable DHCP
      </label>
    </div>
    <div
      class="form-check col-sm-8"
    >
      <input
        id="7"
        type="checkbox"
      />
      <small
        class="form-text text-muted"
      >
        Enable this option to automatically assign IP addresses to the devices connected to the router.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged (dhcp). 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="2"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="3"
    >
      DHCP hostname
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="3"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        Hostname which will be provided to DHCP server.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged none. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="2"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;

exports[`<LAN/> Snapshot unmanaged static. 1`] = `
<form>
  <h3>
    LAN Settings
  </h3>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="1"
    >
      LAN mode
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="1"
      >
        <option
          value="managed"
        >
          Router
        </option>
        <option
          value="unmanaged"
        >
          Computer
        </option>
      </select>
      <small
        class="form-text text-muted"
      >
        
Router mode means that this devices manages the LAN (acts as a router, can assing IP addresses, ...).
Computer mode means that this device acts as a client in this network. It acts in a similar way as WAN, but
it has opened ports for configuration interface and other services.
        
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="2"
    >
      IPv4 protocol
    </label>
    <div
      class="col-sm-8"
    >
      <select
        class="form-control"
        id="2"
      >
        <option
          value="dhcp"
        >
          DHCP (automatic configuration)
        </option>
        <option
          value="static"
        >
          Static IP address (manual configuration)
        </option>
        <option
          value="none"
        >
          Don't connect this device to LAN
        </option>
      </select>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="6"
    >
      IP address
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="6"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="7"
    >
      Network mask
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="7"
          required=""
          type="text"
          value="255.255.255.0"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="8"
    >
      Gateway
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="8"
          required=""
          type="text"
          value="192.168.1.4"
        />
      </div>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="9"
    >
      DNS server 1
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="9"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
  </div>
  <div
    class="form-group row"
  >
    <label
      class="form-control-label col-sm-3"
      for="10"
    >
      DNS server 2
    </label>
    <div
      class="col-sm-8"
    >
      <div
        class="input-group"
      >
        <input
          class="form-control "
          id="10"
          type="text"
          value=""
        />
      </div>
      <small
        class="form-text text-muted"
      >
        DNS server address is not required as the built-in DNS resolver is capable of working without it.
      </small>
    </div>
  </div>
  <button
    class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
  >
     
     
    Save
  </button>
</form>
`;
